--- a/src/main/resources/templates/reviewForm.html
+++ b/src/main/resources/templates/reviewForm.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>Create a new review</h1>
-<!--
 <form action="#" th:action="@{/review/add/{criteriumId}}" th:object="${review}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
     <p>Priority: <input type="text" th:field="*{priority}" /></p>
     <p>Link for Git commit: <input type="text" th:field="*{gitCommit}" /></p>
+    <!--
     <p>Criterium:
         <select th:field="*{criterium}">
             <option th:each="criterium : ${criteriumList}" th:value="${criterium.criteriumId}"
@@ -22,8 +22,9 @@
             <option th:each="target : ${targetList}" th:value="${target.targetId}"
                     th:text="${target.description}"></option>
         </select>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <p>
+    -->
+    <input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
--->
 </body>
 </html>
