--- a/src/main/resources/templates/targetForm.html
+++ b/src/main/resources/templates/targetForm.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h1>Create a new target</h1>
-<!--
 <form action="#" th:action="@{/target/add/{criteriumId}}" th:object="${target}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
-    <p>Target date: <input type="text" th:field="*{datecreated}" /></p>
+    <p>Target date: <input type="text" th:field="*{dateCreated}" /></p>
+    <!--
     <p>Criterium:
         <select th:field="*{criterium}">
             <option th:each="criterium : ${criteriumList}" th:value="${criterium.criteriumId}"
                     th:text="${criterium.description}"></option>
         </select>
     </p>
+    -->
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
--->
 </body>
 </html>
