--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -9,13 +9,13 @@
         <h1>Categories</h1>
 
         <h2>Overview of existing categories</h2>
-
         <table>
             <tr>
-                <th>Category name</th>
+                <th>Category name: </th>
             </tr>
             <tr th:each="category: ${allCategories}">
                 <td th:text="${category.name}" />
+                <td><a th:href="@{/criteria/{categoryId}(categoryId=${category.categoryId})}">Show all criteria</a></td>
             </tr>
         </table>
 
@@ -25,8 +25,16 @@
             <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
         </form>
 
+        <h2>Delete a category</h2>
+        <tr th:each="category: ${allCategories}">
+            <td th:text="${category.name}" />
+            <td><a th:href="@{/category/delete/{categoryId}(categoryId=${category.categoryId})}">Delete</a></td>
+            <br>
+        </tr>
+
+        <h2>Show all categories and criteria</h2>
         <div>
-            <a th:href="@{/category/add}">Add category</a>
+            <a th:href="@{/criteria}">Show all Criteria</a>
         </div>
     </body>
 </html>
