--- a/src/main/resources/templates/criteriumOverview.html
+++ b/src/main/resources/templates/criteriumOverview.html
@@ -9,12 +9,12 @@
     <h1>All criteria for category:</h1>
         <table>
             <tr>
-                <th>Category- </th>
-                <th>Point- </th>
-                <th>Criterium description- </th>
-                <th>Targets- </th>
+                <th>Category - </th>
+                <th>Point - </th>
+                <th>Criterium description - </th>
+                <th>Targets - </th>
                 <th>-</th>
-                <th>Reviews- </th>
+                <th>Reviews - </th>
                 <th>-</th>
                 <th>-</th>
             </tr>
@@ -23,7 +23,7 @@
                 <td th:text="${criterium.points}" />
                 <td th:text="${criterium.description}" />
                 <td th:text="${criterium.targets}" />
-                <td><a th:href="@{/target/add/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Add target</a></td>
+                <td><a th:href="@{/target/add}" class="button">Add target</a></td>
                 <td th:text="${criterium.reviews}" />
                 <td><a th:href="@{/review/add/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Add review</a></td>
                 <td><a th:href="@{/criteria/delete/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Delete</a></td>
