--- a/src/main/resources/templates/criteriumOverview.html
+++ b/src/main/resources/templates/criteriumOverview.html
@@ -31,7 +31,7 @@
         </table>
 
     <div>
-        <a th:href="@{/criteria/add}">Add more criteria</a>
+        <a th:href="@{/criteria/{id}/add(id=${categoryId})}">  Add more criteria</a>
     </div>
 
     <div>
