--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -1,36 +1,29 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title>Category Overview</title>
-        <link rel="stylesheet" type="text/css" href="portfolio.css" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    </head>
-    <body>
-        <h1>Categories</h1>
+<head>
+    <title >Category Overview</title>
+    <link rel="stylesheet" type="text/css" href="portfolio.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1 style="text-align:center;">Categories</h1>
 
-        <h2>Overview of existing categories</h2>
-        <table>
-            <tr>
-                <th>Category name: </th>
-            </tr>
-            <tr th:each="category: ${allCategories}">
-                <td><a th:href="@{/criteria/{categoryId}(categoryId=${category.categoryId})}">
-                    <span th:text="${category.name}"></span></a></td>
-            </tr>
-        </table>
+<h2>Overview of existing categories</h2>
+<table>
+    <tr th:each="category: ${allCategories}">
+        <td><a th:href="@{/criteria/{categoryId}(categoryId=${category.categoryId})}">
+            <span th:text="${category.name}"></span></a></td>
+        <td><a th:href="@{/category/delete/{categoryId}(categoryId=${category.categoryId})}">Delete</a></td>
+    </tr>
+</table>
+<br>
+<h2>Create a new category</h2>
+<form action="#" th:action="@{/category/add}" th:object="${category}" method="post">
+    <p>Category name: <input type="text" th:field="*{name}" /></p>
+    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+</form>
 
-        <h2>Create a new category</h2>
-        <form action="#" th:action="@{/category/add}" th:object="${category}" method="post">
-            <p>Category name: <input type="text" th:field="*{name}" /></p>
-            <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-        </form>
 
-        <h2>Delete a category</h2>
-        <tr th:each="category: ${allCategories}">
-            <td th:text="${category.name}" />
-            <td><a th:href="@{/category/delete/{categoryId}(categoryId=${category.categoryId})}">Delete</a></td>
-            <br>
-        </tr>
 
-    </body>
+</body>
 </html>
