Category n criterium work, target n review overview work, target n review form dont work

--- a/src/main/resources/templates/criteriumOverview.html
+++ b/src/main/resources/templates/criteriumOverview.html
@@ -27,7 +27,7 @@
         </table>
 
     <div>
-        <a th:href="@{/criteria/add}">Add more criteria</a>
+        <a th:href="@{/criteria/{id}/add(id=${categoryId})}">  Add more criteria</a>
     </div>
 
     <div>
