--- a/src/main/resources/templates/reviewForm.html
+++ b/src/main/resources/templates/reviewForm.html
@@ -6,24 +6,17 @@
 </head>
 <body>
 <h1>Create a new review</h1>
-<form action="#" th:action="@{/review/add/{criteriumId}}" th:object="${review}" method="post">
+<td th:text="${review.criterium.getCriteriumId()}" />
+<form action="#" th:action="@{/review/add/{criteriumId}(criteriumId=${criteriumId})}" th:object="${review}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
     <p>Priority: <input type="text" th:field="*{priority}" /></p>
     <p>Link for Git commit: <input type="text" th:field="*{gitCommit}" /></p>
-    <!--
-    <p>Criterium:
-        <select th:field="*{criterium}">
-            <option th:each="criterium : ${criteriumList}" th:value="${criterium.criteriumId}"
-                    th:text="${criterium.description}"></option>
-        </select>
-    </p>
     <p>Target:
         <select th:field="*{target}">
-            <option th:each="target : ${targetList}" th:value="${target.targetId}"
-                    th:text="${target.description}"></option>
+            <option th:each="target : ${targetsByReview}" th:value="${target.targetId}"
+                    th:text="${target.points}"></option>
         </select>
     <p>
-    -->
     <input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
