--- a/src/main/resources/templates/targetOverview.html
+++ b/src/main/resources/templates/targetOverview.html
@@ -24,7 +24,7 @@
 </table>
 
 <div>
-    <a th:href="@{/target/add/{criteriumId}}">Add more targets</a> <!-- werkt niet -->
+    <a th:href="@{/target/add/{criteriumId}(criteriumId=${criteriumId})}">  Add more targets</a>
 </div>
 
 <div>
