--- a/src/main/resources/templates/targetForm.html
+++ b/src/main/resources/templates/targetForm.html
@@ -9,7 +9,7 @@
 <form action="#" th:action="@{/target/add/{criteriumId}(criteriumId=${criteriumId})}" th:object="${target}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
     <p>Target date: <input type="date" th:field="*{dateCreated}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <input type="submit" value="Submit" /> <input type="reset" value="Reset" />
 </form>
 </body>
 </html>
