--- a/src/main/resources/templates/criteriumOverview.html
+++ b/src/main/resources/templates/criteriumOverview.html
@@ -2,32 +2,35 @@
 <html xmlns:th="https://www.thymeleaf.org">
     <head>
         <title>Criterium Overview</title>
-        <link rel="stylesheet" type="text/css" href="portfolio.css" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-    <h1 style="text-align:center;">All criteria for category:</h1>
+    <h1>All criteria for category:</h1>
         <table>
             <tr>
                 <th>Category - </th>
                 <th>Point - </th>
-                <th>Criterium description - </th>
+                <th>Criterium Description - </th>
+                <th>Learning Process Overview - </th>
                 <th>Targets Overview - </th>
                 <th>Reviews Overview - </th>
+                <th> </th>
                 <th> </th>
             </tr>
             <tr th:each="criterium: ${criteriaByCategory}">
                 <td th:text="${criterium.category.name}" />
                 <td th:text="${criterium.points}" />
                 <td th:text="${criterium.description}" />
+                <td><a th:href="@{/process/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Show learning process</a></td>
                 <td><a th:href="@{/target/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Show targets</a></td>
                 <td><a th:href="@{/review/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Show reviews</a></td>
+                <td><a th:href="@{/criteria/{categoryId}/add(category=${criterium.category.categoryId})}"class="button">Update</a></td>
                 <td><a th:href="@{/criteria/delete/{criteriumId}(criteriumId=${criterium.criteriumId})}" class="button">Delete</a></td>
             </tr>
         </table>
 
     <div>
-        <a th:href="@{/criteria/{id}/add(id=${categoryId})}">  Add more criteria</a>
+        <a th:href="@{/criteria/{id}/add(id=${categoryId})}">Add more criteria</a>
     </div>
 
     <div>
