--- a/src/main/resources/templates/reviewForm.html
+++ b/src/main/resources/templates/reviewForm.html
@@ -8,17 +8,29 @@
 <h1>Create a new review</h1>
 <form action="#" th:action="@{/review/add/{criteriumId}(criteriumId=${criteriumId})}" th:object="${review}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
-    <p>Priority: <input type="text" th:field="*{priority}" /></p>
+    <p>Priority:
+
+    <input type="radio" id="Low" name="*{priority}" value="Low">
+    <label for="low">Low</label>
+
+    <input type="radio" id="Medium" name="*{priority}" value="Medium">
+    <label for="medium">Medium</label>
+
+    <input type="radio" id="High" name="*{priority}" value="High">
+    <label for="high">High</label>
+    </p>
+
     <p>Link for Git commit: <input type="text" th:field="*{gitCommit}" /></p>
 
-    <!--
     <p>Target:
         <select th:field="*{target}">
-            <option th:each="target : ${targetsByReview}" th:value="${review.target.targetId}"
-                    th:text="${review.target.description}"></option>
+            <option value=""> </option>
+            <option th:each="target : ${targetsByCriterium}" th:value="${target.targetId}"
+                    th:text="${target.description}"></option>
         </select>
+    </p>
+    <br>
 
-    -->
     <input type="submit" value="Submit" /> <input type="reset" value="Reset" />
 </form>
 </body>
