--- a/src/main/resources/templates/targetForm.html
+++ b/src/main/resources/templates/targetForm.html
@@ -8,7 +8,7 @@
 <h1>Create a new target</h1>
 <form action="#" th:action="@{/target/add/{criteriumId}(criteriumId=${criteriumId})}" th:object="${target}" method="post">
     <p>Description: <input type="text" th:field="*{description}" /></p>
-    <p>Target date: <input type="date" th:field="*{dateCreated}" /></p>
+    <p>Deadline date: <input type="date" th:field="*{deadline}" /></p>
     <input type="submit" value="Submit" /> <input type="reset" value="Reset" />
 </form>
 </body>
