--- a/src/main/resources/templates/categoryOverview.html
+++ b/src/main/resources/templates/categoryOverview.html
@@ -2,15 +2,14 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <title >Category Overview</title>
-    <link rel="stylesheet" type="text/css" href="portfolio.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1 style="text-align:center;">Categories</h1>
+<h1>Categories</h1>
 
 <h2>Overview of existing categories</h2>
 <table>
-    <tr th:each="category: ${allCategories}">
+    <tr th:each="category: ${#lists.sort(allCategories)}">
         <td><a th:href="@{/criteria/{categoryId}(categoryId=${category.categoryId})}">
             <span th:text="${category.name}"></span></a></td>
         <td><a th:href="@{/category/delete/{categoryId}(categoryId=${category.categoryId})}">Delete</a></td>
