--- a/src/main/resources/templates/criteriumForm.html
+++ b/src/main/resources/templates/criteriumForm.html
@@ -7,12 +7,13 @@
     <body>
 
     <h1>Create a new criterium</h1>
-        <form action="#" th:action="@{/criteria/add}" th:object="${criterium}" method="post">
+        <form action="#" th:action="@{/criterium/add}" th:object="${criterium}" method="post">
+            <input type="hidden" th:field="*{id}" />
             <p>Point (0, 1, 2, 3): <input type="range" min="0" max="3" th:field="*{points}" /></p>
             <p>Description: <textarea th:field="*{description}" /></p>
             <p>Category:
                 <select th:field="*{category}">
-                    <option th:each="category : ${categoryList}" th:value="${category.categoryId}" th:text="${category.name}"></option>
+                    <option th:each="category : ${categoryList}" th:value="${category.id}" th:text="${category.description}"></option>
                 </select>
             </p>
             <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
